--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
 
-                <div class="inner cover">
+                <div class="inner-cover">
                     <h1 class="cover-heading">Web Design for Digital Communications II</h1>
                     <p class="lead">University of Guelph-Humber</p>
                 </div>
