--- a/class/week2/blog.html
+++ b/class/week2/blog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wepage</title>
+  <title>Blog</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
     }
 
     .height2 {
-      height: 500px;
+      height: 699px;
     }
 
     .green {
@@ -38,21 +38,15 @@
       background-color: #f7d08a;
     }
   </style>
+
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 height1 green">
+      <div class="col-md-3 height2 orange">
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-2 height2 blue">
-      </div>
-      <div class="col-md-8 height2 orange">
-      </div>
-      <div class="col-md-2 height2 blue">
+      <div class="col-md-9 height2 blue">
       </div>
     </div>
 
