--- a/class/week2/portfolio.html
+++ b/class/week2/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap - Kianna</title>
+  <title>Portfolio - Kianna</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -17,73 +17,79 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   <style media="screen">
-    .blue {
-      background-color: blue;
-      height: 100px;
+    .height1 {
+      height: 70px;
     }
 
-    .red {
-      background-color: red;
-      height: 100px;
-    }
-
-    .yellow {
-      background-color: yellow;
-      height: 100px;
-    }
-
-    .pink {
-      background-color: pink;
-      height: 100px;
-    }
-
-    .green {
-      background-color: green;
-      height: 100px;
+    .height2 {
+      height: 430px;
     }
   </style>
+
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-4 blue">
-      </div>
-      <div class="col-md-4 red">
-      </div>
-      <div class="col-md-4 yellow">
+      <div class="col-md-12 height1 randomColor">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-12 pink">
+      <div class="col-md-12 height2 randomColor">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-6 red">
+      <div class="col-md-3 height1 randomColor">
       </div>
-      <div class="col-md-6 green">
+      <div class="col-md-3 height1 randomColor">
+      </div>
+      <div class="col-md-3 height1 randomColor">
+      </div>
+      <div class="col-md-3 height1 randomColor">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-8 blue">
+      <div class="col-md-3 height1 randomColor">
       </div>
-      <div class="col-md-2 red">
+      <div class="col-md-3 height1 randomColor">
       </div>
-      <div class="col-md-2 yellow">
+      <div class="col-md-3 height1 randomColor">
+      </div>
+      <div class="col-md-3 height1 randomColor">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 height1 randomColor">
       </div>
     </div>
   </div>
-
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    //when the document is loaded
+    $(document).ready(function() {
+      //this function gets a random color between between 0 and 255
+      function getRandomColor() {
+        return Math.floor(Math.random() * 255);
+      }
+      //get all the elements (divs) with the class .randomColor
+      var randomColor = $(".randomColor");
+      //loop through all elements
+      //for each element, change the css backgorund color to RGB + three random colors
+      $.each(randomColor, function(index, item) {
+        $(this).css("background-color", "RGB(" + getRandomColor() + "," + getRandomColor() + "," + getRandomColor() + ")");
+      })
+
+    })
+  </script>
 </body>
 
 </html>
