--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                         <li><a target="_blank" href="class/week2/index.html">Class Week 2</a></li>
                                         <li><a target="_blank" href="presentations/week3/upload.html">Presentation Week 3</a></li>
                                         <li><a target="_blank" href="class/week3/index.html">Class Week 3</a></li>
+                                        <li><a target="_blank" href="class/week4/types.html">Class Week 4</a></li>
                                     </ul>
                                 </li>
                             </ul>
