--- a/class/week4/index.html
+++ b/class/week4/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kianna Gram | JavaScript</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kianna Gram | JavaScript</title>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style media="screen">
-      .height1 {
-        height: 60px;
-      }
+  <style media="screen">
+    .height1 {
+      height: 60px;
+    }
 
-      .height2 {
-        height: 600px;
-      }
-    </style>
-  </head>
-  <body>
+    .height2 {
+      height: 600px;
+    }
+  </style>
+</head>
+
+<body>
   <div class="container">
     <div class="row">
       <div class="col-md-12 height1 randomColor">
@@ -71,33 +73,69 @@
   </script>
 
   <script type="text/javascript">
-  /*
-    //alert("my JS!");
-    //name of a function, then () to call the function
-    // in this case "my JS!" is called the 'parameter'
-    // in this case it's text, which is alays within '' or ""
-    console.log("Write to the console.....");
-    //put this in at multiple places in the text JS to make sure you know where code when wrong
+    /*
+        //alert("my JS!");
+        //name of a function, then () to call the function
+        // in this case "my JS!" is called the 'parameter'
+        // in this case it's text, which is alays within '' or ""
+        console.log("Write to the console.....");
+        //put this in at multiple places in the text JS to make sure you know where code when wrong
 
-    //above are built-in functions
-    //we can also define our own functions
+        //above are built-in functions
+        //we can also define our own functions
 
-    function myFirstFunction(){ //function definition
-      // whatever is in the curly brackets {} will run when we call the function
-      console.log("Write from inside the function.....");
+        function myFirstFunction(){ //function definition
+          // whatever is in the curly brackets {} will run when we call the function
+          console.log("Write from inside the function.....");
+        }
+
+          myFirstFunction();
+
+          //a function call
+
+          function myFunctionWithParameter(name){
+            console.log("Hello "+name);
+          }
+
+          myFunctionWithParameter("Kianna");
+          myFunctionWithParameter(" , how are you?");
+    */
+    //variables defined with var keyword
+    //Boolean values are true or false
+    var myOnOff = true;
+    var isDayTime = false;
+
+    //number values
+    var salary = 100000;
+    var carPrice = 250000.25;
+
+    //text or string
+    var emailAddress = "kgram01@guelphhumber.ca"
+    var sentence = 'The Judgement of Paris.';
+    var anotherSentence = "Kianna's class";
+    // the difference between a string and a number is all about the quotations
+    //numbers don't have quotations
+    //strings have quotations and are text
+
+    var salary1 = 100000;
+    var salary2 = "100000";
+
+    var taxes = 25000;
+
+    console.log("My take home pay is " + (salary1 - taxes));
+
+    console.log("1a bunch of info : " + salary + " and " + carPrice + " and even more " + isDayTime);
+
+    var myConcatenation = "2a bunch of info : " + salary + " and " + carPrice + " and even more " + isDayTime;
+
+    console.log(myConcatenation);
+
+    function writeToConsole(myString) {
+      console.log(myString);
     }
 
-      myFirstFunction();
-
-      //a function call
-
-      function myFunctionWithParameter(name){
-        console.log("Hello "+name);
-      }
-
-      myFunctionWithParameter("Kianna");
-      myFunctionWithParameter(" , how are you?");
-*/
+    writeToConsole(myConcatenation);
+    writeToConsole("3" + myConcatenation);
   </script>
 </body>
 
