--- a/presentations/week5/upload.html
+++ b/presentations/week5/upload.html
@@ -32,7 +32,7 @@
 
         <h2>Mind Map</h2>
         <!-- Insert your screenshot of the mindmap here -->
-        <img src="Screen Shot 2018-02-05 at 7.54.25 PM.png" alt="Mind Map Screenshot">
+        <img class="images" src="Screen Shot 2018-02-05 at 7.54.25 PM.png" alt="Mind Map Screenshot">
 
         <h3>Mockup</h3>
         <!-- Insert your Illustrator PDF here -->
