--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         <li><a target="_blank" href="presentations/week4/upload.html">Presentation Week 4</a></li>
                                         <li><a target="_blank" href="class/week4/fourrows.html">Class Week 4</a></li>
                                         <li><a target="_blank" href="presentations/week5/upload.html">Presentation Week 5</a></li>
-                                        <li><a target="_blank" href="class/week5/week5js.html">Class Week 5</a></li>
+                                        <li><a target="_blank" href="class/week5/verticalflex.html">Class Week 5</a></li>
                                     </ul>
                                 </li>
                             </ul>
