--- a/presentations/week5/upload.html
+++ b/presentations/week5/upload.html
@@ -10,17 +10,21 @@
         font-family: 'Lora', sans-serif;
         font-size: 30px;
         text-align: center;
+        padding: 10px;
       }
       .images{
         text-align: center;
         max-width: 100%;
-        padding: 10px;
         margin-bottom: 60px;
         border: 1px solid black;
       }
 
+      .all{
+        padding: 10px;
+      }
+      
       p{
-        font-size: 100px;s
+        font-size: 100px;
       }
     </style>
   </head>
@@ -29,10 +33,9 @@
       <h1>Kianna's Mind Map and Mockup</h1>
 
       <div>
-
         <h2>Mind Map</h2>
         <!-- Insert your screenshot of the mindmap here -->
-        <img class="images" src="Screen Shot 2018-02-05 at 7.54.25 PM.png" alt="Mind Map Screenshot">
+        <img class="images" src="mindmap.png" alt="Mind Map Screenshot">
 
         <h3>Mockup</h3>
         <!-- Insert your Illustrator PDF here -->
