--- a/class/week6/tables.html
+++ b/class/week6/tables.html
@@ -1,102 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Holy Grail Grid | Kianna</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Slopestyle | Pyeongchang 2018</title>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style media="screen">
-      .height1{
-        height: 70px;
-      }
 
-      .height2{
-        height: 600px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 height1 randomColor">
-        </div>
+  <style media="screen">
+    .height1 {
+      height: 900px;
+    }
+
+    .height2{
+      height: 50px;
+    }
+
+    .height3{
+      height: 220px;
+    }
+
+    img{
+      transform: scale(0.7);
+    }
+
+    .widthRank{
+      width: 30px;
+    }
+
+    .widthFlag{
+      width: 20px;
+    }
+
+  /* FLEX */
+  .flexSingle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .flexVertical{
+    line-height: 50px;
+  }
+
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 height2 flexVertical">
+        <h1 class="flexVertical">PEYONGCHANG 2018</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 height1 randomColor">
       </div>
 
-      <div class="row">
-        <div class="col-md-2 height2 randomColor">
+      <div class="col-md-8 height1">
+        <div class="row">
+          <div class="col-md-12 height3 randomColor">
+          </div>
         </div>
 
-        <div class="col-md-8 height2 myConsole">
-          <table class="table table-striped table-hover">
-            <tr>
-              <th>Position</th>
-              <th>Name</th>
-              <th>Games Played</th>
-              <th>Goals</th>
-              <th>Assists</th>
-              <th>Points</th>
-            </tr>
-            <tr>
-              <td>C</td>
-              <td>Auston Matthews</td>
-              <td>55</td>
-              <td>24</td>
-              <td>26</td>
-              <td>50</td>
-            </tr>
-            <tr>
-              <td>LW</td>
-              <td>Mitch Marner</td>
-              <td>59</td>
-              <td>13</td>
-              <td>36</td>
-              <td>49</td>
-            </tr>
-          </table>
-        </div>
-
-        <div class="col-md-2 height2 randomColor">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-12 height1 randomColor">
+        <div class="row">
+          <div class="col-md-12 height1">
+            <table class="table">
+              <tr>
+                <th class="widthRank">Rank</th>
+                <th class="widthRank">Bib</th>
+                <th class="widthFlag">Country</th>
+                <th class="widthName">Name</th>
+                <th>Best Score</th>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>6</td>
+                <td><img src="images/usa-flag.png" alt="american flag."></td>
+                <td>GERARD Redmond</td>
+                <td>87.16</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>7</td>
+                <td><img src="images/can-flag.png" alt="canadian flag."></td>
+                <td>PARROT Max</td>
+                <td>86.00</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>2</td>
+                <td><img src="images/can-flag.png" alt="canadian flag."></td>
+                <td>McMORRIS Mark</td>
+                <td>85.20</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>3</td>
+                <td><img src="images/nor-flag.png" alt="norwegian flag."></td>
+                <td>SANDBECH Staale</td>
+                <td>81.01</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>12</td>
+                <td><img src="images/nzl-flag.png" alt="new zealand flag."></td>
+                <td>GARCIA KNIGHT Carlos</td>
+                <td>78.60</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>1</td>
+                <td><img src="images/nor-flag.png" alt="norwegian flag."></td>
+                <td>KLEVELAND Marcus</td>
+                <td>77.76</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>14</td>
+                <td><img src="images/can-flag.png" alt="canadian flag."></td>
+                <td>NICHOLSON Tyler</td>
+                <td>76.41</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>8</td>
+                <td><img src="images/nor-flag.png" alt="norwegian flag."></td>
+                <td>BERGREM Torgeir</td>
+                <td>75.80</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>21</td>
+                <td><img src="images/swe-flag.png" alt="swedish flag."></td>
+                <td>MATTSSON Niklas</td>
+                <td>74.71</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>10</td>
+                <td><img src="images/bel-flag.png" alt="belgian flag."></td>
+                <td>SMITS Seppe</td>
+                <td>69.03</td>
+              </tr>
+              <tr>
+                <td>11</td>
+                <td>4</td>
+                <td><img src="images/can-flag.png" alt="canadian flag."></td>
+                <td>TOUTANT Sebastien</td>
+                <td>61.08</td>
+              </tr>
+              <tr>
+                <td>12</td>
+                <td>9</td>
+                <td><img src="images/nor-flag.png" alt="norwegian flag."></td>
+                <td>ROISLAND Mons</td>
+                <td>DNS</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      //when the document is loaded
-      $(document).ready(function() {
-        //this function gets a random color between between 0 and 255
-        function getRandomColor() {
-          return Math.floor(Math.random() * 255);
-        }
-        //get all the elements (divs) with the class .randomColor
-        var randomColor = $(".randomColor");
-        //loop through all elements
-        //for each element, change the css backgorund color to RGB + three random colors
-        $.each(randomColor, function(index, item) {
-          $(this).css("background-color", "RGB(" + getRandomColor() + "," + getRandomColor() + "," + getRandomColor() + ")");
-        })
+  </div>
 
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    //when the document is loaded
+    $(document).ready(function() {
+      //this function gets a random color between between 0 and 255
+      function getRandomColor() {
+        return Math.floor(Math.random() * 255);
+      }
+      //get all the elements (divs) with the class .randomColor
+      var randomColor = $(".randomColor");
+      //loop through all elements
+      //for each element, change the css backgorund color to RGB + three random colors
+      $.each(randomColor, function(index, item) {
+        $(this).css("background-color", "RGB(" + getRandomColor() + "," + getRandomColor() + "," + getRandomColor() + ")");
       })
-    </script>
-  </body>
 
-  </html>
+    })
+  </script>
+</body>
+
+</html>
