--- a/class/week6/tables.html
+++ b/class/week6/tables.html
@@ -19,22 +19,52 @@
     <![endif]-->
 
   <style media="screen">
+    /* heights */
     .height1 {
-      height: 900px;
+      height: 1080px;
     }
 
     .height2{
-      height: 50px;
+      height: 90px;
     }
 
     .height3{
       height: 220px;
     }
 
+    .height4{
+      height: 460px;
+    }
+
+    /* basics */
+
     img{
       transform: scale(0.7);
     }
 
+    h3{
+      margin-bottom: 0px;
+    }
+
+    h2{
+      font-size: 50px;
+      font-weight: 700;
+      margin-top: 5px;
+      line-height: 48px;
+      margin-bottom: 25px;
+    }
+
+    h4{
+      margin-bottom: none;
+      font-size: 20px;
+      line-height: 17px;
+    }
+
+    .grey{
+      background-color: #f5f5f5;
+    }
+
+    /* column and profle adjustments */
     .widthRank{
       width: 30px;
     }
@@ -43,36 +73,140 @@
       width: 20px;
     }
 
-  /* FLEX */
-  .flexSingle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+    .logo{
+      transform: scale(1);
+    }
 
-  .flexVertical{
-    line-height: 50px;
-  }
+    .ad{
+      transform: scale(0.4);
+    }
 
+    .aligntitle{
+      text-align: center;
+    }
+
+    /* Borders */
+    .border{
+      border: 4px solid black;
+    }
+
+    .border-gold{
+      border-top: 12px solid gold;
+    }
+
+    .border-silver{
+      border-top: 12px solid grey;
+    }
+
+    .border-bronze{
+      border-top: 12px solid #b56727;
+    }
+    /* FLEX */
+    .flexSingle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .flexSpaceAround {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+    .flexVertSpaceAround {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+    /* NAV */
+    ul{
+      margin-top:30px;
+      border-top: 1px solid black;
+      padding-top: 20px;
+      padding-left: 0;
+    }
+    ul li {
+      list-style: none;
+    }
+
+    ul li a {
+      font-size: 20px;
+    }
+
+    ul li a:hover {
+      text-decoration: none;
+      color: black;
+      font-weight: 700;
+    }
+
+    a:hover{
+      text-decoration: none;
+      color: black;
+      font-weight: 700;
+    }
   </style>
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 height2 flexVertical">
-        <h1 class="flexVertical">PEYONGCHANG 2018</h1>
+      <div class="col-md-9 height2">
+        <h1>PEYONGCHANG 2018</h1>
+      </div>
+      <div class="col-md-3 height2">
+        <img class="logo" src="logo.jpg" alt="Peyongchang olympic 2018 logo.">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-4 height1 randomColor">
-      </div>
+      <div class="col-md-4 height4 grey">
+        <h3>MEN'S</h3>
+        <h2>SNOWBOARD SLOPESTYLE</h2>
+        <h4><a href="#">Qualifications</a></h4>
+        <h4><a href="#">Final</a></h4>
 
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Halfpipe</a></li>
+          <li><a href="#">Parallel Giant Slalom</a></li>
+          <li><a href="#">Snowboard Cross</a></li>
+          <li><a href="#">Slopestyle</a></li>
+          <li><a href="#">Big Air</a></li>
+        </ul>
+      </div>
       <div class="col-md-8 height1">
         <div class="row">
-          <div class="col-md-12 height3 randomColor">
+          <div class="col-md-12 height3">
+            <div class="col-md-4 height3 flexSpaceAround">
+              <img class="logo" src="images/gerard.png" alt="Redmond Gerard">
+            </div>
+            <div class="col-md-4 height3 flexSpaceAround">
+              <img class="logo" src="images/parrot.png" alt="Max Parrot">
+            </div>
+            <div class="col-md-4 height3 flexSpaceAround">
+              <img class="logo" src="images/mcmorris.png" alt="Mark McMorris">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 height2">
+            <div class="col-md-4 height2 border-gold aligntitle">
+              <h3>GOLD</h3>
+              <p>Redmond GERARD</p>
+            </div>
+            <div class="col-md-4 height2 border-silver aligntitle">
+              <h3>SILVER</h3>
+              <p>Max PARROT</p>
+            </div>
+            <div class="col-md-4 height2 border-bronze aligntitle">
+              <h3>BRONZE</h3>
+              <p>Mark McMORRIS</p>
+            </div>
           </div>
         </div>
 
@@ -84,7 +218,7 @@
                 <th class="widthRank">Bib</th>
                 <th class="widthFlag">Country</th>
                 <th class="widthName">Name</th>
-                <th>Best Score</th>
+                <th class="widthRank">Best Score</th>
               </tr>
               <tr>
                 <td>1</td>
@@ -176,6 +310,11 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12 height3 flexSpaceAround">
+        <img class="ad" src="images/ad.png" alt="Samsung Advertisement">
+      </div>
+    </div>
   </div>
 
 
