--- a/class/week6/tables.html
+++ b/class/week6/tables.html
@@ -212,7 +212,7 @@
 
         <div class="row">
           <div class="col-md-12 height1">
-            <table class="table">
+            <table class="table table-hover">
               <tr>
                 <th class="widthRank">Rank</th>
                 <th class="widthRank">Bib</th>
