--- a/class/week7/index.html
+++ b/class/week7/index.html
@@ -23,9 +23,9 @@
       height: 70px;
     }
 
-    .height2 {
+    /*.height2 {
       height: 600px;
-    }
+    } */
   </style>
 </head>
 
@@ -37,11 +37,11 @@
     </div>
 
     <div class="row">
-      <div class="col-md-2 height2 randomColor">
+      <div class="col-md-2 randomColor">
       </div>
-      <div class="col-md-8 height2 output">
+      <div class="col-md-8 output">
       </div>
-      <div class="col-md-2 height2 randomColor">
+      <div class="col-md-2 randomColor">
       </div>
     </div>
 
@@ -77,7 +77,7 @@
   <script>
     var cats = [{
         "breed": "panther",
-        "hairlength": "short",
+        "hairLength": "short",
         "color": "black",
         "isOutdoor": true,
         "isFoundInWild": true,
@@ -114,12 +114,13 @@
       {
         "breed": "maineCoon",
         "hairLength": "long",
-        "isIndoor": true,
+        "color": "white",
+        "isOutdoor": true,
         "isFoundInWild": false,
         "age": 6,
         "name": "flufferButt",
         "owner": "shouldBeMine",
-        "imgUrl": "https://github.com/andersonguelphjs/andersonguelphjs.github.io/blob/master/class/week7/img/cat3.jpg"
+        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat3.jpg"
       },
 
       {
@@ -148,10 +149,10 @@
 
       {
         "breed": "persian",
-        "hairlength": "long",
+        "hairLength": "long",
         "color": "white",
         "isOutdoor": false,
-        "isFoundInwild": false,
+        "isFoundInWild": false,
         "age": 2,
         "name": "kit",
         "owner": "kateland",
@@ -171,18 +172,6 @@
       },
 
       {
-        "breed": "mixed",
-        "hairLength": "long",
-        "color": "grey",
-        "isOutdoor": true,
-        "isFoundInWild": false,
-        "age": 8,
-        "name": "Spinach",
-        "owner": "Megan",
-        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat8.jpg"
-      },
-
-      {
         "breed": "britishShorthair",
         "hairLength": "short",
         "color": "grey",
@@ -195,24 +184,38 @@
       }
     ];
 
-    $(document).ready(function(){
+    $(document).ready(function() {
       //$(".output").html("test output");
 
-      var html="<table class='table table-striped table-hover'>"+
-      "<tr>"+
-      "<th>picture</th>"+
-      "<th>name</th>"+
-      "<th>age</th>"+
-      "<th>owner</th>"+
-      "<th>breed</th>"+
-      "<th>colour</th>"+
-      "<th>hair length</th>"+
-      "<th>outdoor ?</th>"+
-      "<th>wild ?</th>"+
-      "</tr>";
+      var html = "<table class='table table-striped table-hover'>" +
+        "<tr>" +
+        "<th>picture</th>" +
+        "<th>name</th>" +
+        "<th>age</th>" +
+        "<th>owner</th>" +
+        "<th>breed</th>" +
+        "<th>colour</th>" +
+        "<th>hair length</th>" +
+        "<th>outdoor ?</th>" +
+        "<th>wild ?</th>" +
+        "</tr>";
 
-      //here is the loop
+      //here is the loop of the array "cats"
+      for (var i = 0; i < cats.length; i++) {
+        console.log("i " + i);
+        html+= "<tr>" +
+        "<td><img src='"+cats[i].imgUrl+"'/></td>" +
+        "<td>"+cats[i].name+"</td>"+
+        "<td>"+cats[i].age+"</td>" +
+        "<td>"+cats[i].owner+"</td>" +
+        "<td>"+cats[i].breed+"</td>" +
+        "<td>"+cats[i].color+"</td>" +
+        "<td>"+cats[i].hairLength+"</td>" +
+        "<td>"+cats[i].isOutdoor+"</td>" +
+        "<td>"+cats[i].isFoundInWild+"</td>" +
+        "</tr>";
 
+      }
       html += "</table>";
       $(".output").html(html);
     });
