--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                         <li><a target="_blank" href="presentations/week7/upload.html">Presentation Week 7</a></li>
                                         <li><a target="_blank" href="class/week7/assignment.html">Class Week 7</a></li>
                                         <li><a target="_blank" href="presentations/week7/upload.html">Presentation Week 8</a></li>
-                                        <li><a target="_blank" href="class/week6/myjson.json">Class Week 8</a></li>
+                                        <li><a target="_blank" href="class/week8/assets/myjson.json">Class Week 8</a></li>
                                     </ul>
                                 </li>
                             </ul>
