--- a/presentations/week8/upload.html
+++ b/presentations/week8/upload.html
@@ -40,7 +40,7 @@
 
       <h2>rebranded logo:</h2>
       <!--insert your image below. make sure that the filename is correctly typed in/in the same folder as this file.-->
-      <img src="Untitled-1.jpg" alt="Rebranded Logo." />
+      <img src="logo.jpg" alt="Rebranded Logo." />
 
       <h2>mockup:</h2>
       <!--insert your image below. make sure that the filename is correctly typed in/in the same folder as this file.-->
