--- a/class/week9/weather.html
+++ b/class/week9/weather.html
@@ -25,7 +25,7 @@
       }
 
       .height2{
-        height: 150px;
+        height: 157px;
       }
 
       .height3{
@@ -45,7 +45,7 @@
       }
 
       .padding1{
-        padding-top: 15px;
+        padding-top: 20px;
       }
 
       .padding2{
@@ -75,6 +75,7 @@
 
       .boldText{
         font-weight: bold;
+        font-size: 20px;
       }
 
       .weatherDiv{
@@ -135,9 +136,9 @@
       for(var i=0;i<f.length;i++){ //loop and build the html
           console.log("i "+i);
           html+="<div class='blackText dayOfWeek'>"
-          html+="<div class='boldText'>"+f[i].text+"</div>";
+          html+="<div class='boldText'>"+f[i].day+"</div>";
           html+="<div>"+f[i].date+"</div>";
-          html+="<div>"+f[i].day+"</div>";
+          html+="<div>"+f[i].text+"</div>";
           html+="<div><i class='boldText padding1 wi "+iconClasses[f[i].text]+"'></i></div>",
           html+="</div>"
       }
