--- a/class/week9/weather.html
+++ b/class/week9/weather.html
@@ -122,7 +122,8 @@
       "Mostly Cloudy":"wi-cloudy",
       "Breezy":"wi-day-light-wind",
       "Partly Cloudy":"wi-day-cloudy",
-      "Mostly Sunny":"wi-day-sunny"
+      "Mostly Sunny":"wi-day-sunny",
+      "Sunny":"wi-day-sunny"
     }
 
     var url="https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20in%20(select%20woeid%20from%20geo.places(1)%20where%20text%3D%22toronto%2C%20ON%22)%20and%20u%3D'c'&format=json&diagnostics=true&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=";
