--- a/class/week9/weather.html
+++ b/class/week9/weather.html
@@ -123,7 +123,7 @@
       "Breezy":"wi-day-light-wind",
       "Partly Cloudy":"wi-day-cloudy",
       "Mostly Sunny":"wi-day-sunny",
-      "Sunny":"wi-day-sunny"
+      "Sunny":"wi-day-sunny",
       "Snow":"wi-day-snow",
       "Snow Showers":"wi-day-rain-mix"
     }
