--- a/presentations/week12/instructions.html
+++ b/presentations/week12/instructions.html
@@ -74,6 +74,10 @@
         margin-left: 30px;
       }
 
+      .underline{
+        border-bottom: 1px solid black;
+      }
+
       #upload{
         list-style-type: decimal;
       }
@@ -147,30 +151,13 @@
       </ul>
 
       <h2>the rubric.</h2>
-      <div class="row">
-        <div class="col-md-3">
           <ul class="rubric">
-            <li><fa-underline>Colour Palette</fa-underline></li>
+            <li class="underline">Colour Palette /3</li>
             <li>Hex codes</li>
             <li>Primary and Secondary</li>
             <li>At least 3 colours</li>
             <li><strong>total</strong></li>
           </ul>
-        </div>
-
-        <div class="col-md-1">
-          <ul class="rubric">
-            <li>/3</li>
-            <li>/1</li>
-            <li>/1</li>
-            <li>/1</li>
-            <li><strong>/15</strong></li>
-          </ul>
-        </div>
-
-      </div>
-
-
 
     </main>
     <main>
