--- a/presentations/week12/instructions.html
+++ b/presentations/week12/instructions.html
@@ -86,6 +86,10 @@
         list-style-type: none;
       }
 
+      .rubric li{
+        margin-bottom: 20px;
+      }
+
       @media screen and (max-width: 690px) {
         h1{ padding-top: 50px; }
       }
@@ -143,20 +147,25 @@
       <p>Looking for more inspiration? Click <a href="https://www.canva.com/learn/50-meticulous-style-guides-every-startup-see-launching/">this link</a> for more excellent style guide examples.</p>
 
       <h2>submission instructions.</h2>
-      <p>Once you've completed your style guide:</p>
+      <p>Once you've completed your style guide (you know the drill):</p>
       <ul id="upload">
         <li>Export it as a .png file</li>
         <li>Copy the upload.html text from Kianna's Repo by <a href="#">clicking here.</a></li>
-        <li></li>
+        <li>Paste it into an upload.html file in week 12</li>
+        <li>Fill in the field where your name should go</li>
+        <li>Insert your .png image</li>
+        <li>Link this file to your home page</li>
+        <li>commmit. push origin.</li>
       </ul>
 
       <h2>the rubric.</h2>
           <ul class="rubric">
-            <li class="underline">Colour Palette /3</li>
-            <li>Hex codes</li>
-            <li>Primary and Secondary</li>
-            <li>At least 3 colours</li>
-            <li><strong>total</strong></li>
+            <li>Colour Palette (Hex codes, Primary & Secondary, At least 3 colours) <strong>/3</strong></li>
+            <li>Typography (2 fonts used, Sizing infromation included) <strong>/3</strong></li>
+            <li>Logo (a new logo was created) <strong>/2</strong></li>
+            <li>Dos and Don'ts (3 Do examples, 3 Don't examples) <strong>/6</strong></li>
+            <li>Style Guide adheres to brand <strong>/1</strong></li>
+            <li><strong>total /15</strong></li>
           </ul>
 
     </main>
