--- a/presentations/week12/instructions.html
+++ b/presentations/week12/instructions.html
@@ -101,7 +101,7 @@
 
     <main>
       <h2>the scenario.</h2>
-      <p>A new company called <strong>The Candy Shop</strong> is just starting up. They are a unqiue candy store that sells sweets from around the world, and they need your help to create and design their brand. You must create a basic style guide for the company that includes a colour palette, typography details, a new logo and a short "dos and don'ts" guide on how the logo should be used. It is up to you how you want to brand the company - make it modern or rustic or anything in between! You may use any Adobe software to complete this task.</p>
+      <p>A new company called <strong>The Candy Shop</strong> is just starting up. They are a unique candy store that sells sweets from around the world, and they need your help to create and design their brand. You must create a basic style guide for the company that includes a colour palette, typography details, a new logo and a short "dos and don'ts" guide on how the logo should be used. It is up to you how you want to brand the company - make it modern or rustic or anything in between! You may use any Adobe software to complete this task.</p>
       <p>See the "components" section below for specific details about what should be included in the style guide.</p>
       <p><a href="Style Guide Example.png">This is an example of what the final product should include.</a></p>
 
