--- a/presentations/week11/upload.html
+++ b/presentations/week11/upload.html
@@ -20,6 +20,14 @@
     align-items: center;
     flex-wrap: wrap;
   }
+
+  .individualCard{
+    transition: transform .2s; /* Animation */
+  }
+
+  .individualCard:hover{
+    transform: scale(0.95);
+  }
 /*
   .cardInfo {
     text-align: center;
