--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
                                         <li><a target="_blank" href="class/week10/lottery.html">Class Week 10</a></li>
                                         <li><a target="_blank" href="presentations/week11/upload.html">Presentation Week 11</a></li>
                                         <li><a target="_blank" href="class/week11/shop.html">Class Week 11</a></li>
+                                        <li><a target="_blank" href="presentations/week12/instructions.html">Style Guide Instructions</a></li>
+                                        <li><a target="_blank" href="class/week11/shop.html">Class Week 12</a></li>
                                     </ul>
                                 </li>
                             </ul>
