--- a/presentations/week12/instructions.html
+++ b/presentations/week12/instructions.html
@@ -149,7 +149,7 @@
       <p>Once you've completed your style guide (you know the drill):</p>
       <ul id="upload">
         <li>Export it as a .png file</li>
-        <li>Copy the upload.html text from Kianna's Repo by <a href="">clicking here.</a></li>
+        <li>Copy the upload.html text from Kianna's Repo by <a href="https://github.com/kiannagram/kiannagram.github.io/blob/master/presentations/week12/upload.html">clicking here.</a> Remember to copy the RAW code.</li>
         <li>Paste it into an upload.html file in week 12</li>
         <li>Fill in the field where your name should go</li>
         <li>Insert your .png image</li>
