--- a/class/week12/start.html
+++ b/class/week12/start.html
@@ -104,7 +104,7 @@
     }
 //will contain all the events
     function initEvents(){
-      //do this when user changes teh select
+      //do this when user changes the select
         $(".selectContainer").find("select").on("change", function(){
           var val = $(this).val();
 
@@ -155,6 +155,7 @@
         //loop this here
       $(".output").html(html);
     }
+
     $(document).ready(function() {
       getOptions();
       getAds();
