--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                         <li><a target="_blank" href="class/week11/shop.html">Class Week 11</a></li>
                                         <li><a target="_blank" href="presentations/week12/instructions.html">Style Guide Instructions</a></li>
                                         <li><a target="_blank" href="class/week12/animation/animation.html">Class Week 12</a></li>
-                                        <li><a target="_blank" href="thenookfinal.pdf">Final Assignment</a></li>
+                                        <li><a target="_blank" href="FINAL STYLE GUIDE 3.pdf">Final Assignment</a></li>
                                     </ul>
                                 </li>
                             </ul>
